# takt

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
data/tenants/: config.json
docker/: Dockerfile  entrypoint.sh
migrations/: env.py
migrations/versions/: 7effbab3d374_initial_schema.py
scripts/: create_admin.py
src/takt/: auth.py  db.py  model_router.py  models.py  server.py  session.py  tenant.py  tenant_tools.py
src/takt/static/: admin.html  index.html  login.html
templates/: default_claude.md
