[project]
name = "takt"
version = "0.1.0"
description = "Multi-tenant AI agent platform built on Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk>=0.1.44",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "fastmcp-gsuite>=1.0.0",
]

[project.scripts]
takt = "takt.server:main"
